--- a/requirements.txt
+++ b/requirements.txt
@@ -82,11 +82,11 @@ PyDispatcher==2.0.5
 Pygments==2.9.0
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
+pypiwin32==223
 pyrsistent==0.17.3
 PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2021.1
-pywin32==300
 pywinpty==1.1.1
 pyzmq==22.0.3
 queuelib==1.6.1
