--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ backcall==0.2.0
 beautifulsoup4==4.9.3
 bleach==3.3.0
 bs4==0.0.1
+cargo==0.3
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
@@ -87,6 +88,7 @@ pyrsistent==0.17.3
 PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2021.1
+pywin32==300
 pywinpty==1.1.1
 pyzmq==22.0.3
 queuelib==1.6.1
