--- a/requirements.txt
+++ b/requirements.txt
@@ -88,7 +88,7 @@ pyrsistent==0.17.3
 PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2021.1
-pywinpty==1.1.1
+pywin32==300
 pyzmq==22.0.3
 queuelib==1.6.1
 requests==2.25.1
@@ -106,7 +106,6 @@ terminado==0.10.0
 testpath==0.5.0
 tornado==6.1
 traitlets==5.0.5
-tweepy==3.10.0
 Twisted==21.2.0
 twisted-iocpsupport==1.0.1
 urllib3==1.26.4
