--- a/requirements.txt
+++ b/requirements.txt
@@ -87,6 +87,7 @@ pyparsing==2.4.7
 pyrsistent==0.17.3
 PySocks==1.7.1
 python-dateutil==2.8.1
+pytz==2021.1
 queuelib==1.6.1
 requests==2.25.1
 requests-oauthlib==1.3.0
